# ai-job-application-tracker

./: .env.example  .gitignore  README.md  celery_worker.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
app/: cli.py  config.py  csrf.py  database.py  dependencies.py  main.py  redis.py
app/ai_agent/: openai_client.py  prompts.py  routes.py  schemas.py  services.py  tasks.py
app/applications/: models.py  routes.py  schemas.py  services.py
app/auth/: models.py  routes.py  schemas.py  services.py
app/resumes/: models.py  routes.py  schemas.py  services.py
app/templates/: base.html  dashboard.html  login.html
app/templates/ai_agent/: results.html
app/templates/applications/: create.html  detail.html  list.html
app/templates/resumes/: list.html
docs/plans/: 2026-03-24-implementation-plan.md  2026-03-24-system-design.md
migrations/: env.py
migrations/versions/: f40c4f5d20a6_initial_tables.py
tests/: conftest.py  test_csrf.py  test_health.py  test_integration.py  test_redis.py
tests/ai_agent/: test_prompts.py  test_services.py
tests/applications/: test_application_service.py
tests/auth/: test_auth_service.py
tests/resumes/: test_resume_service.py
