[project]
name = "ai-job-application-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "alembic==1.13.0",
    "pydantic-settings==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.0",
    "celery[redis]==5.4.0",
    "redis==5.1.0",
    "openai==1.50.0",
    "pypdf==5.0.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
